--- a/pages/viewinguserprofile.html
+++ b/pages/viewinguserprofile.html
@@ -146,3 +146,380 @@
         </div>
     </div>
 </div>
+
+<style>
+    .profile-page {
+        padding: 1rem;
+    }
+
+    .profile-header {
+        background: rgba(44, 62, 80, 0.3);
+        border-radius: 15px;
+        overflow: hidden;
+        margin-bottom: 2rem;
+        padding: 2rem;
+    }
+
+    .profile-top-section {
+        display: flex;
+        align-items: flex-start;
+        justify-content: space-between;
+        gap: 2rem;
+        margin-bottom: 2rem;
+    }
+
+    .profile-main-content {
+        display: flex;
+        align-items: center;
+        gap: 2rem;
+    }
+
+    .profile-avatar-large {
+        width: 120px;
+        height: 120px;
+        background: var(--deep-orange);
+        border: 4px solid var(--dark);
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 3rem;
+        color: white;
+        overflow: hidden;
+        background-size: cover;
+        background-position: center;
+    }
+
+    .profile-avatar-large img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    .profile-name-section {
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+    }
+
+    .name-and-badge {
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+        flex-wrap: wrap;
+    }
+
+    .name-and-badge h2 {
+        margin: 0;
+        font-size: 1.8rem;
+        color: var(--light);
+    }
+
+    .username {
+        color: var(--gray);
+        font-size: 1rem;
+    }
+
+    .trust-badge {
+        display: flex;
+        align-items: center;
+        background: transparent !important;
+    }
+
+    .trust-badge i {
+        font-size: 1.2rem;
+        transition: color 0.3s ease;
+        background: transparent !important;
+    }
+
+    /* Trust badge levels */
+    [data-level="BRONZE"] .fas.fa-check-circle {
+        color: #CD7F32;
+        background: transparent !important;
+    }
+
+    [data-level="SILVER"] .fas.fa-check-circle {
+        color: #C0C0C0;
+        background: transparent !important;
+    }
+
+    [data-level="GOLD"] .fas.fa-check-circle {
+        color: #FFD700;
+        background: transparent !important;
+    }
+
+    [data-level="PLATINUM"] .fas.fa-check-circle {
+        color: #E5E4E2;
+        background: transparent !important;
+    }
+
+    [data-level="DIAMOND"] .fas.fa-check-circle {
+        color: #B9F2FF;
+        background: transparent !important;
+    }
+
+    .profile-info-bar {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        gap: 1rem;
+        padding-top: 1rem;
+        border-top: 1px solid rgba(255, 255, 255, 0.1);
+    }
+
+    .bio-section {
+        flex: 1;
+        color: var(--gray);
+        font-size: 0.95rem;
+        line-height: 1.5;
+        max-width: 600px;
+    }
+
+    /* Twitter-style Tabs */
+    .profile-tabs {
+        margin-top: 1rem;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    }
+
+    .tabs-container {
+        display: flex;
+        gap: 1rem;
+        max-width: 600px;
+    }
+
+    .tab-btn {
+        background: none;
+        border: none;
+        color: var(--gray);
+        padding: 1rem 1.5rem;
+        font-size: 1rem;
+        cursor: pointer;
+        position: relative;
+        transition: all 0.3s ease;
+    }
+
+    .tab-btn:hover {
+        color: var(--light);
+    }
+
+    .tab-btn.active {
+        color: var(--light);
+        font-weight: 500;
+    }
+
+    .tab-indicator {
+        position: absolute;
+        bottom: -1px;
+        left: 0;
+        width: 100%;
+        height: 4px;
+        background: var(--deep-orange);
+        border-radius: 4px 4px 0 0;
+        transform: scaleX(0);
+        transition: transform 0.3s ease;
+    }
+
+    .tab-btn.active .tab-indicator {
+        transform: scaleX(1);
+    }
+
+    /* Campaign List Styles */
+    .tab-content {
+        margin-top: 1rem;
+    }
+
+    .tab-pane {
+        display: none;
+    }
+
+    .tab-pane.active {
+        display: block;
+    }
+
+    .campaign-list {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    .campaign-item {
+        background: rgba(44, 62, 80, 0.3);
+        border-radius: 12px;
+        padding: 1.5rem;
+        transition: all 0.3s ease;
+    }
+
+    .campaign-item:hover {
+        background: rgba(44, 62, 80, 0.5);
+    }
+
+    .campaign-info h3 {
+        margin-bottom: 0.5rem;
+        color: var(--light);
+    }
+
+    .campaign-info p {
+        color: var(--gray);
+        margin-bottom: 1rem;
+    }
+
+    .campaign-meta {
+        display: flex;
+        gap: 1rem;
+        color: var(--gray);
+        font-size: 0.9rem;
+    }
+
+    .campaign-meta span {
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+    }
+
+    .campaign-item.finished .campaign-meta span:first-child {
+        color: var(--success);
+    }
+
+    .empty-state {
+        text-align: center;
+        padding: 3rem 2rem;
+        background: rgba(44, 62, 80, 0.3);
+        border-radius: 12px;
+    }
+
+    .empty-icon {
+        width: 80px;
+        height: 80px;
+        background: rgba(211, 84, 0, 0.1);
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 0 auto 2rem;
+    }
+
+    .empty-icon i {
+        font-size: 2.5rem;
+        color: var(--deep-orange);
+    }
+
+    .empty-state h3 {
+        color: var(--light);
+        margin-bottom: 1rem;
+        font-size: 1.5rem;
+    }
+
+    .empty-state p {
+        color: var(--gray);
+        margin-bottom: 2rem;
+    }
+
+    @media (max-width: 768px) {
+        .profile-header {
+            padding: 1rem;
+        }
+
+        .profile-top-section {
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+        }
+
+        .profile-main-content {
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .name-and-badge {
+            justify-content: center;
+        }
+
+        .profile-avatar-large {
+            margin: 0 auto;
+        }
+
+        .profile-info-bar {
+            flex-direction: column;
+            align-items: stretch;
+        }
+
+        .bio-section {
+            text-align: center;
+        }
+
+        .tabs-container {
+            width: 100%;
+        }
+
+        .tab-btn {
+            flex: 1;
+            padding: 1rem 0.5rem;
+            font-size: 0.9rem;
+        }
+    }
+
+    .campaign-actions {
+        display: flex;
+        gap: 1rem;
+        margin-top: 1rem;
+    }
+
+    .view-btn, .donate-btn {
+        display: inline-flex;
+        align-items: center;
+        gap: 0.5rem;
+        padding: 0.5rem 1rem;
+        border-radius: 8px;
+        text-decoration: none;
+        transition: all 0.3s ease;
+        font-size: 0.9rem;
+    }
+
+    .view-btn {
+        background: rgba(255, 255, 255, 0.1);
+        color: var(--light);
+    }
+
+    .donate-btn {
+        background: var(--deep-orange);
+        color: white;
+    }
+
+    .view-btn:hover, .donate-btn:hover {
+        transform: translateY(-2px);
+        opacity: 0.9;
+    }
+
+    .progress-bar {
+        width: 100%;
+        height: 6px;
+        background: rgba(255, 255, 255, 0.1);
+        border-radius: 3px;
+        margin: 0.5rem 0;
+        overflow: hidden;
+    }
+
+    .progress {
+        height: 100%;
+        background: var(--deep-orange);
+        border-radius: 3px;
+        transition: width 0.3s ease;
+    }
+
+    .progress-text {
+        font-size: 0.8rem;
+        color: var(--gray);
+    }
+
+    .campaign-meta {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 1rem;
+        align-items: center;
+    }
+
+    .finished .campaign-meta span:first-child {
+        color: var(--success);
+    }
+</style>
