--- a/pages/viewinguserprofile.html
+++ b/pages/viewinguserprofile.html
@@ -523,3 +523,30 @@
         color: var(--success);
     }
 </style>
+
+<script>
+document.addEventListener('DOMContentLoaded', function() {
+    const tabButtons = document.querySelectorAll('.tab-btn');
+    const tabPanes = document.querySelectorAll('.tab-pane');
+
+    tabButtons.forEach(button => {
+        button.addEventListener('click', () => {
+            // Remove active class from all buttons and panes
+            tabButtons.forEach(btn => btn.classList.remove('active'));
+            tabPanes.forEach(pane => pane.classList.remove('active'));
+
+            // Add active class to clicked button
+            button.classList.add('active');
+
+            // Show corresponding tab content
+            const tabId = button.dataset.tab + '-campaigns';
+            document.getElementById(tabId).classList.add('active');
+        });
+    });
+
+    // Set the trust level
+    const userLevel = document.getElementById('userLevel');
+    userLevel.setAttribute('data-level', '{{ user.trust_level|upper }}');
+});
+</script>
+{% endblock %} 
