--- a/pages/create_campaigns.html
+++ b/pages/create_campaigns.html
@@ -1,4 +1,3 @@
-
 {% extends "base.html" %}
 
 {% block content %}
@@ -54,7 +53,7 @@
                               placeholder="Share your story. Why are you raising funds? How will the money be used?"></textarea>
                 </div>
 
-                <div class="form-group">
+                <!-- <div class="form-group">
                     <label for="image">Campaign Image</label>
                     <div class="file-upload">
                         <input type="file" id="image" name="image" accept="image/*">
@@ -63,7 +62,7 @@
                             <span>Drop your image here or click to upload</span>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
 
             
@@ -198,6 +197,7 @@ input:focus, select:focus, textarea:focus {
     justify-content: flex-end;
     margin-top: 3rem;
 }
+
 .btn-primary, .btn-secondary {
     padding: 1rem 2rem;
     border-radius: 8px;
